style.css
* {
  /* noselect */
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -khtml-user-select: none; /* Konquerer */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}
html {
  background-color: black;
  /*background-color: rgb(222, 241, 231);*/
}
body {
  text-align: center;
  overflow-x: hidden;
  overflow-y: hidden;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}
.spread {
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
}
.spread canvas {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  min-width: 50%;
  min-height: 50%;
}
.centered {
  display: table;
  overflow: hidden;
  width: 100%;
}
.centered div {
  display: table-cell;
  vertical-align: middle;
}
.notransition {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}
#bg {
  opacity: 0;
  transition: opacity 0.6s;
}
#bg-alt {
  display: none;
}
#code-container {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 12vh;
  left: 0;
  text-align: left;
  margin-top: 0;
  font-size: 2vh;
  z-index:100;
  color: black;
}
.words-container {
  z-index: 100;
  background-color: black;
  height: 12vh;
  overflow: hidden;
  white-space: nowrap;
}
.preformatted {
  width: 2.4vh;
}
.chars {
  color: aliceblue;
  font-size: 4vh;
  vertical-align: middle;
  cursor: default;
  transition: color 0.1s, opacity 1s;
  opacity: 0;
  min-height: 4vh;
  display: inline-block;
}
#question-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}
#answer-container {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}
#question-link {
  color: aliceblue;
  cursor: pointer;
  text-decoration: none;
}
#question-link:hover {
  text-decoration: underline;
}
#question {
  vertical-align: top;
  max-height: 5vh;
  width: 90vw;
}

@media screen and (min-device-width: 700px) {
  .words {
    font-size: 5vh;
  }
  #question {
    max-height: 6vh;
  }
}

